Added new event for slide refinement

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -16,7 +16,9 @@ ENV CLASS="KG1"
 ENV LESSON_NUMBER=1
 ENV SUBJECT_NAME="English"
 ENV LANGUAGE="English"
-ENV EVENT_NAME="generate_slides"
-ENV TIMESTAMP="2025-07-02-17-53-15"
-
+ENV EVENT_NAME="refine_audio_content"
+ENV TIMESTAMP="2025-07-10-18-52-06"
+ENV RUN_TYPE="audio_refinement"
+ENV SLIDE_NO=0
+ENV END_USER_PROMPT="Generate new slide narration having exact narration as following: Assalam o Alaikum, How are you students?"
 CMD ["/bin/bash"]
